; ModuleID = '/home/carl/AnghaBench/linux/sound/isa/ad1816a/extr_ad1816a.c_snd_ad1816a_pnp_detect.c'
source_filename = "/home/carl/AnghaBench/linux/sound/isa/ad1816a/extr_ad1816a.c_snd_ad1816a_pnp_detect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pnp_card_link = type { i32 }
%struct.pnp_card_device_id = type { i32 }

@snd_ad1816a_pnp_detect.dev = internal global i32 0, align 4
@SNDRV_CARDS = common dso_local global i32 0, align 4
@enable = common dso_local global i32* null, align 8
@ad1816a_devices = common dso_local global i32 0, align 4
@ENODEV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pnp_card_link*, %struct.pnp_card_device_id*)* @snd_ad1816a_pnp_detect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @snd_ad1816a_pnp_detect(%struct.pnp_card_link* %0, %struct.pnp_card_device_id* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.pnp_card_link*, align 8
  %5 = alloca %struct.pnp_card_device_id*, align 8
  %6 = alloca i32, align 4
  store %struct.pnp_card_link* %0, %struct.pnp_card_link** %4, align 8
  store %struct.pnp_card_device_id* %1, %struct.pnp_card_device_id** %5, align 8
  br label %7

7:                                                ; preds = %33, %2
  %8 = load i32, i32* @snd_ad1816a_pnp_detect.dev, align 4
  %9 = load i32, i32* @SNDRV_CARDS, align 4
  %10 = icmp slt i32 %8, %9
  br i1 %10, label %11, label %36

11:                                               ; preds = %7
  %12 = load i32*, i32** @enable, align 8
  %13 = load i32, i32* @snd_ad1816a_pnp_detect.dev, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i32, i32* %12, i64 %14
  %16 = load i32, i32* %15, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %11
  br label %33

19:                                               ; preds = %11
  %20 = load i32, i32* @snd_ad1816a_pnp_detect.dev, align 4
  %21 = load %struct.pnp_card_link*, %struct.pnp_card_link** %4, align 8
  %22 = load %struct.pnp_card_device_id*, %struct.pnp_card_device_id** %5, align 8
  %23 = call i32 @snd_card_ad1816a_probe(i32 %20, %struct.pnp_card_link* %21, %struct.pnp_card_device_id* %22)
  store i32 %23, i32* %6, align 4
  %24 = load i32, i32* %6, align 4
  %25 = icmp slt i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %19
  %27 = load i32, i32* %6, align 4
  store i32 %27, i32* %3, align 4
  br label %39

28:                                               ; preds = %19
  %29 = load i32, i32* @snd_ad1816a_pnp_detect.dev, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* @snd_ad1816a_pnp_detect.dev, align 4
  %31 = load i32, i32* @ad1816a_devices, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* @ad1816a_devices, align 4
  store i32 0, i32* %3, align 4
  br label %39

33:                                               ; preds = %18
  %34 = load i32, i32* @snd_ad1816a_pnp_detect.dev, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* @snd_ad1816a_pnp_detect.dev, align 4
  br label %7

36:                                               ; preds = %7
  %37 = load i32, i32* @ENODEV, align 4
  %38 = sub nsw i32 0, %37
  store i32 %38, i32* %3, align 4
  br label %39

39:                                               ; preds = %36, %28, %26
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local i32 @snd_card_ad1816a_probe(i32, %struct.pnp_card_link*, %struct.pnp_card_device_id*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
